<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">今日首钢</string>
    <string name="image">图片</string>
    <string name="index_text">首页</string>
    <string name="video_text">视频</string>
    <string name="epaper_text">报纸</string>
    <string name="personal_text">我的</string>
    <string name="manage_channel">频道设置</string>
    <string name="subscribe_my_category">长按排序或点击删除</string>
    <string name="subscribe_more_category">推荐频道</string>
    <string name="more_category_tip">点击添加更多</string>
    <string name="personal_active">活动</string>
    <string name="personal_message">消息推送</string>
    <string name="personal_font">字体设置</string>
    <string name="personal_cache">清除缓存</string>
    <string name="personal_version">当前版本号</string>
    <string name="personal_our">关于我们</string>
    <string name="get_paper_data">正在拉取数字报数据…</string>
    <string name="get_news_detail">正在拉取文章数据…</string>
    <string name="not_paper">当期无报</string>
    <string name="getDataFial">加载数据失败…</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载……</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="input_pen">我来说两句</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="search_text">搜 索</string>
    <string name="search_record">搜索记录</string>
    <string name="search_key_word">请输入关键字</string>
    <string name="search_result">搜索结果</string>
    <string name="cancel">取消</string>
    <string name="save">提交</string>
    <string name="comment">我来评论</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="login_">登     录</string>
    <string name="collect">收藏</string>
    <string name="night">夜间</string>
    <string name="sun">日间</string>
    <string name="message">消息</string>
    <string name="login_hint">请输入手机号</string>
    <string name="password_hint">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_other">其他方式登录</string>
    <string name="edit_user">编辑资料</string>
    <string name="edit_save">保存</string>
    <string name="user_photo">头像</string>
    <string name="basic_information">基本信息</string>
    <string name="nick_name">昵称</string>
    <string name="more_setting">更多设置</string>
    <string name="phone_number">手机号</string>
    <string name="change_binding">换绑</string>
    <string name="change_password">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="comfirm">确认</string>
    <string name="change_phone">换绑手机</string>
    <string name="news_comment">新闻评论</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_active">我的活动</string>
    <string name="code_hint">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="regist_now">立即注册</string>
    <string name="regist_tip">已有账号   我要</string>
    <string name="find_password">忘记密码</string>
    <string name="commit">提  交</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="reply_hint">留言将在筛选后显示，对所有人可见</string>
    <string name="directory">往期</string>
    <string name="my_message">我的消息</string>
    <string name="copyright">Copyright © 2003 shougang.com.cn, All Rights Reserved</string>
    <string name="email_phone">邮编：100041  查号台：010-88291114</string>
    <string name="adress">地	址：北京石景山区首钢厂东门</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_active">ActiveActivity</string>
    <string name="title_activity_active_detail">ActiveDetailActivity</string>

</resources>
