<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#1a1c1d"
    android:orientation="vertical" >
    
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="44dp"
	    android:orientation="horizontal" 
	    android:gravity="center_vertical"
	    android:background="@color/night_bg"
	    >
        
        <ImageView
            android:id="@+id/back"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:contentDescription="@string/image"
            android:layout_marginLeft="8dp"
            android:src="@drawable/search_back_night" />
        
        <TextView 
	        android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
	        android:text="@string/edit_user"
	        android:gravity="center"
	        android:textSize="18sp"
	        android:textColor="@color/night_text_color"
	        />
	    
	    <TextView 
	        android:id="@+id/save"
	        android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:textSize="18sp"
            android:layout_marginRight="8dp"
	        />
    	
    </LinearLayout>
    
    
    <LinearLayout 
        android:id="@+id/user_photo"
	    android:layout_width="fill_parent"
	    android:layout_height="52dp"
	    android:orientation="horizontal" 
	    android:gravity="center_vertical"
	    android:background="@color/night_bg"
	    android:layout_marginTop="32dp"
	    >
	    
        <TextView 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_marginLeft="14dp"
            android:text="@string/user_photo"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:textColor="@color/night_text_color"
            />
        
        <com.newgen.UI.CircleImageView
        	android:id="@+id/loginButton"
        	android:layout_width="44dp"
         	android:layout_height="44dp"
         	android:contentDescription="@string/image"
         	android:src="@drawable/user_login_btn"
         	android:layout_marginRight="8dp"
         	/>
        
        <ImageView 
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/go_arrow"
            />
	    
    </LinearLayout>
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/basic_information"
        android:textSize="14sp"
        android:textColor="#a4a4a4"
        android:gravity="center_vertical"
        />
    
    <LinearLayout 
        android:id="@+id/nick_name"
	    android:layout_width="fill_parent"
	    android:layout_height="40dp"
	    android:orientation="horizontal" 
	    android:gravity="center_vertical"
	    android:background="@color/night_bg"
	    >
	    
        <TextView 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_marginLeft="14dp"
            android:text="@string/nick_name"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:textColor="@color/night_text_color"
            />
        
        <TextView 
            android:id="@+id/nick_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="8dp"
            android:text="@string/nick_name"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:textColor="@color/night_text_color"
            />
        
        <ImageView 
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/go_arrow"
            />
	    
    </LinearLayout>
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/more_setting"
        android:textSize="14sp"
        android:textColor="#a4a4a4"
        android:gravity="center_vertical"
        />
    
    <LinearLayout 
        android:id="@+id/change_phone"
	    android:layout_width="fill_parent"
	    android:layout_height="40dp"
	    android:orientation="horizontal" 
	    android:gravity="center_vertical"
	    android:background="@color/night_bg"
	    >
	    
        <TextView 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_marginLeft="14dp"
            android:text="@string/phone_number"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:textColor="@color/night_text_color"
            />
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="8dp"
            android:text="@string/change_binding"
            android:textSize="16sp"
            android:textColor="@color/night_text_color"
            android:gravity="center_vertical"
            />
        
        <ImageView 
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/go_arrow"
            />
	    
    </LinearLayout>
    
    <View 
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        />
    
    
    <LinearLayout 
        android:id="@+id/change_password"
	    android:layout_width="fill_parent"
	    android:layout_height="40dp"
	    android:orientation="horizontal" 
	    android:gravity="center_vertical"
	    android:background="@color/night_bg"
	    >
	    
        <TextView 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_marginLeft="14dp"
            android:text="@string/change_password"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:textColor="@color/night_text_color"
            />
        
        <ImageView 
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/go_arrow"
            />
	    
    </LinearLayout>
    
    <TextView 
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/night_bg"
        android:layout_marginTop="22dp"
        android:text="@string/logout"
        android:textColor="#FF0B0B"
        android:textSize="18sp"
        android:gravity="center"
        />
    
    
    

</LinearLayout>
