<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >
    
    
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="44dp"
	    android:orientation="horizontal" 
	    android:gravity="center_vertical"
	    android:layout_marginLeft="8dp"
	    android:layout_marginRight="8dp"
	    >
        
        <ImageView
            android:id="@+id/back"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:contentDescription="@string/image"
            android:src="@drawable/search_back" />
        
        <TextView 
	        android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
	        android:text="@string/login"
	        android:gravity="center"
	        android:textSize="18sp"
	        />
	    
	    <TextView 
	        android:id="@+id/register"
	        android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:text="@string/regist"
            android:textColor="#DB1E1D"
            android:textSize="17sp"
	        />
    	
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:layout_marginLeft="43dp"
        android:layout_marginRight="43dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
	    
        <ImageView 
            android:id="@+id/img1"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:src="@drawable/phone"
            />
        
        <EditText 
            android:id="@+id/user_phone"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_toRightOf="@+id/img1"
            android:background="@null"
            android:layout_marginLeft="6dp"
            android:layout_centerVertical="true"
            android:hint="@string/login_hint"
            />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_toRightOf="@+id/img1"
            android:layout_below="@+id/user_phone"
            android:background="#eee"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            />
        
    </RelativeLayout>
    
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="43dp"
        android:layout_marginRight="43dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
	    
        <ImageView 
            android:id="@+id/img2"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:src="@drawable/password"
            />
        
        <EditText 
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_toRightOf="@+id/img2"
            android:background="@null"
            android:layout_marginLeft="6dp"
            android:layout_centerVertical="true"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_toRightOf="@+id/img2"
            android:layout_below="@+id/user_password"
            android:background="#eee"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            />
        
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="43dp"
        android:layout_marginRight="43dp"
        >
        
        <TextView 
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:layout_alignParentRight="true"
            android:textColor="#dd1e1e"
            android:textStyle="bold"
            android:textSize="14sp"
            />
        
    </RelativeLayout>
    
    <TextView 
        android:id="@+id/login"
        android:layout_width="match_parent"
    	android:layout_height="40dp"
    	android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/login_"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:background="@drawable/login_shape_corner"
        />
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center_vertical"
    	android:layout_marginLeft="12dp"
    	android:layout_marginRight="12dp"
    	android:layout_marginTop="59dp"
    	android:orientation="horizontal"
        >
        
        <View 
            android:layout_width="0dp"
    		android:layout_height="1dp"
    		android:layout_weight="1"
    		android:background="#b2b2b2"
            />
        
        <TextView 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_marginLeft="2dp"
	        android:layout_marginRight="2dp"
	        android:text="@string/login_other"
	        android:textColor="#b2b2b2"
	        android:textSize="14sp"
	        />
        
        
        <View 
            android:layout_width="0dp"
    		android:layout_height="1dp"
    		android:layout_weight="1"
    		android:background="#b2b2b2"
            />
        
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="1"
    	android:gravity="center_vertical"
    	android:layout_marginLeft="12dp"
    	android:layout_marginRight="12dp"
    	android:layout_marginBottom="40dp"
    	android:orientation="horizontal"
        >
        
        
        <ImageView 
            android:id="@+id/qq_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/login_qq"
            android:layout_marginLeft="28dp"
            android:layout_alignParentLeft="true"
            />
        
        <ImageView 
            android:id="@+id/weibo_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/login_weibo"
            android:layout_marginRight="28dp"
            android:layout_alignParentRight="true"
            />
        
        <ImageView 
            android:id="@+id/wechat_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/login_wechat"
            android:layout_centerHorizontal="true"
            />
        
        
        
    </RelativeLayout>
    
    

</LinearLayout>
